@@ -1,56 +1,79 @@
 package org.elebras.gesbatiments.model;
 
+import org.elebras.gesbatiments.visiteur.BatimentVisiteur;
+import org.elebras.gesbatiments.visiteur.Visiteur;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.*;
 
 class BatimentTest {
 
-    @Test
-    void testConstructorAndGetters() {
-        Piece piece1 = new Piece(20, true, 0, null);
-        Piece piece2 = new Piece(15, false, 1, null);
-        Etage etage1 = new Etage(1);
-        Etage etage2 = new Etage(2);
+    private Batiment batiment;
+    private Piece piece1;
+    private Piece piece2;
+    private Etage etage1;
+    private Etage etage2;
 
-        Batiment batiment = new Batiment(1, "Immeuble A", "Bureau",
-                List.of(piece1, piece2), List.of(etage1, etage2));
-
-        assertEquals(1, batiment.getNumero());
-        assertEquals("Immeuble A", batiment.getNom());
-        assertEquals("Bureau", batiment.getUsage());
-        assertEquals(2, batiment.getPieces().size());
-        assertEquals(2, batiment.getEtages().size());
+    @BeforeEach
+    void setUp() {
+        this.etage1 = new Etage(1);
+        this.etage2 = new Etage(2);
+        this.piece1 = new Piece(12, true, 1, this.etage1);
+        this.piece2 = new Piece(18, false, 2, this.etage2);
+        this.batiment = new Batiment(1, "Batiment A", "Commercial", Arrays.asList(this.piece1, this.piece2), Arrays.asList(this.etage1, this.etage2));
     }
 
     @Test
-    void testSetters() {
-        Batiment batiment = new Batiment(null, null, null, null, null);
-
-        batiment.setNumero(2);
-        batiment.setNom("Immeuble B");
-        batiment.setUsage("Résidentiel");
-        batiment.setPieces(List.of(new Piece(30, true, 2, null)));
-        batiment.setEtages(List.of(new Etage(3)));
-
-        assertEquals(2, batiment.getNumero());
-        assertEquals("Immeuble B", batiment.getNom());
-        assertEquals("Résidentiel", batiment.getUsage());
-        assertEquals(1, batiment.getPieces().size());
-        assertEquals(1, batiment.getEtages().size());
+    void testGetNumero() {
+        assertEquals(1, this.batiment.getNumero());
     }
 
     @Test
-    void testEqualsAndHashCode() {
-        Batiment batiment1 = new Batiment(1, "Immeuble A", "Bureau", null, null);
-        Batiment batiment2 = new Batiment(1, "Immeuble A", "Résidentiel", null, null);
-        Batiment batiment3 = new Batiment(2, "Immeuble C", "Education", null, null);
+    void testGetNom() {
+        assertEquals("Batiment A", this.batiment.getNom());
+    }
 
-        assertEquals(batiment1, batiment2);
-        assertNotEquals(batiment1, batiment3);
-        assertEquals(batiment1.hashCode(), batiment2.hashCode());
+    @Test
+    void testGetUsage() {
+        assertEquals("Commercial", this.batiment.getUsage());
+    }
+
+    @Test
+    void testGetPieces() {
+        assertNotNull(this.batiment.getPieces());
+        assertEquals(2, this.batiment.getPieces().size());
+    }
+
+    @Test
+    void testGetEtages() {
+        assertNotNull(this.batiment.getEtages());
+        assertEquals(2, this.batiment.getEtages().size());
+    }
+
+    @Test
+    void testEquals() {
+        Batiment batiment2 = new Batiment(1, "Batiment A", "Commercial", Arrays.asList(this.piece1, this.piece2), Arrays.asList(this.etage1, this.etage2));
+        assertEquals(this.batiment, batiment2);
+    }
+
+    @Test
+    void testHashCode() {
+        Batiment batiment2 = new Batiment(1, "Batiment A", "Commercial", Arrays.asList(this.piece1, this.piece2), Arrays.asList(this.etage1, this.etage2));
+        assertEquals(this.batiment.hashCode(), batiment2.hashCode());
+    }
+
+    @Test
+    void testAccept() {
+        Visiteur visiteur = new BatimentVisiteur();
+        this.batiment.accept(visiteur);
+        String result = visiteur.getResult();
+        assertTrue(result.contains("Bâtiment Batiment A"));
+        assertTrue(result.contains("Etage 1"));
+        assertTrue(result.contains("Pièce 1 - Surface: 12 m²"));
+        assertTrue(result.contains("Etage 2"));
+        assertTrue(result.contains("Pièce 2 - Surface: 18 m²"));
     }
 }
